--- a/index.html
+++ b/index.html
@@ -37,10 +37,10 @@
             <img src="images/portrait.jpg" class="portrait" alt="Portrait" />
         </div>
         <div class="column right"><h1>Hello.</h1><h2>I am Jack D. Evans.</h2>
-            <p>I am a computational chemist currently based at <a href="https://tu-dresden.de/mn/chemie/ac/ac1">TU Dresden</a>, endevouring to improve our understanding of the chemical and physical properties of emerging materials.
+            <p>I am a computational chemist currently based at the <a href="https://www.adelaide.edu.au">University of Adelaide</a>, endevouring to improve our understanding of the chemical and physical properties of emerging materials.
 </p>
 
-            <div class="links"><a rel="me" href="mailto:jack.evans@tu-dresden.de" title="E-mail">
+            <div class="links"><a rel="me" href="mailto:j.evans@adelaide.edu.au" title="E-mail">
                         <span class="fas fa-envelope"></span>
                     </a><a rel="me" href="https://twitter.com/jackevansADL" title="Twitter">
                         <span class="fab fa-twitter"></span>
