--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             <img src="images/portrait.jpg" class="portrait" alt="Portrait" />
         </div>
         <div class="column right"><h1>Hello.</h1><h2>I am Jack D. Evans.</h2>
-            <p>I am a computational chemist currently based at the <a href="https://www.adelaide.edu.au">University of Adelaide</a>, endevouring to improve our understanding of the chemical and physical properties of emerging materials.
+            <p>I am a computational chemist currently based at the <a href="https://www.adelaide.edu.au">University of Adelaide</a>, endeavouring to improve our understanding of the chemical and physical properties of emerging materials.
 </p>
 
             <div class="links"><a rel="me" href="mailto:j.evans@adelaide.edu.au" title="E-mail">
